js/src/tests/test262/built-ins/NativeErrors/SyntaxError/prototype/name.js
verifyProperty
(
SyntaxError
.
prototype
"
name
"
{
value
:
"
SyntaxError
"
writable
:
true
enumerable
:
false
configurable
:
true
}
)
;
reportCompare
(
0
0
)
;
